syntax = "proto3";

package services.report;

message Report{
  string report_date = 1;
  string type = 2;
  string description = 3;
  bool anonymous = 4;
  float latitude = 5;
  float longitude = 6;
  string user_id = 7;
}

message ListAllReportsRequest{}

message ListAllReportsResponse{
  repeated Report reports = 1;
}

service ReportService {
  rpc ListAllReports(ListAllReportsRequest) returns (ListAllReportsResponse){}
}
