syntax = "proto3";

package services.report;

message Report{
  string report_date = 1;
  string type = 2;
  string description = 3;
  bool anonymous = 4;
  float latitude = 5;
  float longitude = 6;
}

message CreateReportRequest {
  string user_id = 1;
  Report report = 2;
}

message CreateReportResponse {
  bool created = 1;
}

service ReportService {
  rpc CreateReport(CreateReportRequest) returns (CreateReportResponse){}
}
